--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -24,3 +24,27 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+.vertical-stack {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+}
+
+.plants-row {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.plants {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 200px;
+}
+
+.text {
+  text-align: center;
+}
